--- a/GarageSaleApp/Views/ListingDetail/ListingDetailCellFileAndXib/ListingDetailImageCell.xib
+++ b/GarageSaleApp/Views/ListingDetail/ListingDetailCellFileAndXib/ListingDetailImageCell.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="170" id="KGk-i7-Jjw" customClass="TableViewCell" customModule="GarageSaleApp" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="170" id="KGk-i7-Jjw" customClass="ListingDetailImageCell" customModule="GarageSaleApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="170"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -21,6 +21,10 @@
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="yard-sale-backyard" translatesAutoresizingMaskIntoConstraints="NO" id="VK4-lj-zM7">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="170"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="170" id="9ay-VI-SuF"/>
+                            <constraint firstAttribute="width" constant="320" id="Fbe-z5-U85"/>
+                        </constraints>
                     </imageView>
                 </subviews>
                 <constraints>
@@ -32,7 +36,7 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="listingImage" destination="VK4-lj-zM7" id="FKC-7y-SLs"/>
+                <outlet property="listingImage" destination="VK4-lj-zM7" id="uTe-yM-pRs"/>
             </connections>
             <point key="canvasLocation" x="34" y="117"/>
         </tableViewCell>
