--- a/GarageSaleApp/Views/GarageSalesView/GarageSaleFileAndXib/GarageSaleTableViewCell.xib
+++ b/GarageSaleApp/Views/GarageSalesView/GarageSaleFileAndXib/GarageSaleTableViewCell.xib
@@ -17,11 +17,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="57" id="KGk-i7-Jjw" customClass="GarageSaleTableViewCell" customModule="GarageSaleApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="372" height="119"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="57" id="KGk-i7-Jjw" customClass="GarageSaleTableViewCell" customModule="Garage_Hunt" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="428" height="119"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="372" height="118.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="428" height="118.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bjS-fe-uiE">
@@ -31,7 +31,7 @@
                             <constraint firstAttribute="width" constant="85" id="WJo-LR-lXg"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Address of Garage Sale" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A6N-05-37h">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Address of Garage Sale" textAlignment="natural" lineBreakMode="characterWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A6N-05-37h">
                         <rect key="frame" x="109" y="45" width="254" height="21"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
@@ -58,7 +58,7 @@
                 <outlet property="garageSaleImage" destination="bjS-fe-uiE" id="STu-7V-uaa"/>
                 <outlet property="garageSaleTitle" destination="3ZQ-J6-Eqp" id="o36-ZD-CzN"/>
             </connections>
-            <point key="canvasLocation" x="60" y="109.5"/>
+            <point key="canvasLocation" x="88" y="109.5"/>
         </tableViewCell>
     </objects>
 </document>
